layout bugs

--- a/resources/screen-common.less
+++ b/resources/screen-common.less
@@ -648,6 +648,8 @@ form#editform {
 .research-group-card {
   display: flex;
   flex-wrap: wrap;
+  align-items: flex-end;
+  cursor: pointer;
   margin: 0 1rem 1rem 0;
   overflow: hidden;
   color: @text-color;
